--- a/resources/ui/eval_widget.ui
+++ b/resources/ui/eval_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>480</height>
+    <height>540</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,6 +24,31 @@
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
+       <widget class="QTableView" name="sampleTable">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>600</width>
+          <height>2000000</height>
+         </size>
+        </property>
+        <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+         <bool>true</bool>
+        </attribute>
+        <attribute name="horizontalHeaderStretchLastSection">
+         <bool>true</bool>
+        </attribute>
+       </widget>
+      </item>
+      <item>
        <widget class="ImageWidget" name="widgetGt" native="true"/>
       </item>
       <item>
@@ -31,9 +56,6 @@
       </item>
      </layout>
     </widget>
-   </item>
-   <item>
-    <widget class="QTableWidget" name="tableWidget"/>
    </item>
   </layout>
  </widget>
