--- a/resources/ui/main_window.ui
+++ b/resources/ui/main_window.ui
@@ -51,6 +51,13 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <widget class="QMenu" name="menuMode">
+     <property name="title">
+      <string>Mode</string>
+     </property>
+     <addaction name="actionTrain"/>
+     <addaction name="actionEvaluation"/>
+    </widget>
     <addaction name="actionImport"/>
     <addaction name="actionLoad_csv"/>
     <addaction name="actionSave_csv"/>
@@ -58,6 +65,8 @@
     <addaction name="actionExport_csv"/>
     <addaction name="actionExportIgnored"/>
     <addaction name="action_ExportRevalidation"/>
+    <addaction name="separator"/>
+    <addaction name="menuMode"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
@@ -170,6 +179,9 @@
    <property name="text">
     <string>Load .csv</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+L</string>
+   </property>
   </action>
   <action name="action_Partition_Dataset">
    <property name="text">
@@ -194,6 +206,31 @@
   <action name="actionExport_Labelmap">
    <property name="text">
     <string>Export Labelmap</string>
+   </property>
+  </action>
+  <action name="actionTrain">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Training</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+T</string>
+   </property>
+  </action>
+  <action name="actionEvaluation">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Evaluation</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
    </property>
   </action>
  </widget>
