--- a/resources/ui/main_window.ui
+++ b/resources/ui/main_window.ui
@@ -79,6 +79,8 @@
     <addaction name="action_Generate_tfrecord"/>
     <addaction name="action_Partition_Dataset"/>
     <addaction name="action_Update_Filepaths"/>
+    <addaction name="separator"/>
+    <addaction name="actionEvaluation_Metrics"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Tools"/>
@@ -231,6 +233,11 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+E</string>
+   </property>
+  </action>
+  <action name="actionEvaluation_Metrics">
+   <property name="text">
+    <string>Evaluation Metrics</string>
    </property>
   </action>
  </widget>
