--- a/resources/ui/eval_widget.ui
+++ b/resources/ui/eval_widget.ui
@@ -29,14 +29,14 @@
          <bool>true</bool>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+         <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="maximumSize">
          <size>
-          <width>600</width>
+          <width>800</width>
           <height>2000000</height>
          </size>
         </property>
